# blackboxai

./: .gitignore  ARTIFACTS-READY.txt  README.md  demo.sh  meson.build  meson_options.txt
.github/workflows/: ci.yml
demos/: README.md
docs/superpowers/: RESUME.md
docs/superpowers/plans/: 2026-06-14-blackboxai-m1-headless-background.md  2026-06-14-blackboxai-m2-real-client.md  2026-06-14-blackboxai-m3-decorations.md  2026-06-14-blackboxai-m4-toolbar-menu-workspaces.md  2026-06-17-blackboxai-m5-phase2-deferred-m4.md  2026-06-26-screenshot-region-clipboard.md
docs/superpowers/specs/: 2026-06-14-blackboxai-design.md  2026-06-17-blackboxai-wlroots-0.20-port.md  2026-06-23-screenshot-region-clipboard-design.md
protocols/: meson.build
src/: ClipboardImage.cc  ClipboardImage.hh  CommandRunner.cc  CommandRunner.hh  DataBuffer.cc  DataBuffer.hh  Decoration.cc  Decoration.hh  DecorationPalette.hh  Frame.hh  Keybindings.cc  Keybindings.hh  Keyboard.cc  Keyboard.hh  Menu.cc  Menu.geom.hh  Menu.hh  MenuItem.hh  Output.cc  Output.hh  Rootmenu.cc  Rootmenu.hh  Screenshot.cc  Screenshot.geom.hh  Screenshot.hh  Server.cc  Server.hh  StackingList.cc  StackingList.hh  Timer.cc  Timer.hh  Toolbar.cc  Toolbar.geom.hh  Toolbar.hh  View.cc  View.hh  Workspace.cc  Workspace.hh  main.cc  meson.build
tests/: meson.build
tests/fixtures/: fonts.conf
tests/harness/: DemoRecorder.hh  HeadlessFixture.cc  HeadlessFixture.hh  TestClient.cc  TestClient.hh
tests/system/: background_test.cc  client_test.cc  clipboard_image_test.cc  clock_seam_test.cc  close_button_test.cc  decoration_test.cc  demo_cascade_menu.cc  demo_focus_swap.cc  demo_toolbar.cc  demo_window_ops.cc  focus_restyle_test.cc  focus_swap_test.cc  frame_test.cc  hittest_test.cc  icon_menu_test.cc  iconify_test.cc  keybinding_test.cc  maximize_test.cc  maximized_golden_test.cc  menu_action_test.cc  move_test.cc  resize_test.cc  restack_test.cc  rootmenu_submenu_test.cc  rootmenu_test.cc  screenshot_capture_test.cc  screenshot_e2e_test.cc  screenshot_png_test.cc  screenshot_select_test.cc  toolbar_autohide_golden_test.cc  toolbar_autohide_test.cc  toolbar_placement_test.cc  toolbar_test.cc  view_focus_test.cc  workspace_switch_test.cc
tests/unit/: clock_test.cc  color_test.cc  command_runner_test.cc  databuffer_test.cc  decoration_palette_test.cc  frame_geometry_test.cc  image_render_test.cc  image_test.cc  keybinding_test.cc  keycode_test.cc  listener_test.cc  menu_geometry_test.cc  resource_test.cc  rootmenu_submenu_test.cc  screenshot_geom_test.cc  smoke_test.cc  stackinglist_test.cc  text_boundary_test.cc  text_test.cc  texture_test.cc  timer_test.cc  toolbar_geom_test.cc  wlr_headers_test.cc  workspace_test.cc
toolkit/: Clock.cc  Clock.hh  Color.cc  Color.hh  Image.cc  Image.hh  Resource.cc  Resource.hh  Text.cc  Text.hh  Texture.cc  Texture.hh  listener.hpp  meson.build  text.hpp  wlr.hpp
tools/: make-demos.sh  sanitize-c-header.sh  sanitize-wlr-scene.sh
